MODDCB-187: create DCB Holding if missing when it is being used